[project]
name = "missil"
version = "0.2.1"
description = "Simple FastAPI declarative endpoint-level access control."
authors = [{ name = "Eric Miguel", email = "eric.mrib@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["fastapi>=0.135.3", "PyJWT[crypto]>=2.12.1"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_error_codes = true
warn_return_any = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
# InsecureKeyLengthWarning is intentional in test_decode_jwt_token_invalid_signature
# (uses a short key specifically to trigger decode failure).
filterwarnings = [
    "ignore::jwt.warnings.RemovedInPyjwt3Warning",
    "ignore::UserWarning:jwt",
]

[tool.ruff]
fix = true
include = [
    "pyproject.toml",
    "missil/**/*.py",
    "tests/**/*.py",
    "sample/**/*.py",
    "*.py",
]
respect-gitignore = true
show-fixes = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore-init-module-imports = false
extend-safe-fixes = ["F401"]
select = ["F", "E", "W", "C901", "B", "D", "D401", "E", "I001"]
ignore = ["D417"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
lines-between-types = 0

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]

[tool.pdm.scripts]
format = { shell = "ruff format" }
check = { shell = "ruff check" }
check-md = { shell = "pymarkdown --disable-rules MD013,MD033,MD041,MD046 scan docs README.md" }
check-md-fix = { shell = "pymarkdown --disable-rules MD013,MD033,MD041,MD046 fix docs README.md" }
check-dry-run = { shell = "ruff check --no-fix" }
check-dead = { shell = "vulture missil --min-confidence=90" }
check-dead-lax = { shell = "vulture missil --min-confidence=80" }
check-dead-sensible = { shell = "vulture missil --min-confidence=60" }
check-typing = { shell = "mypy missil" }
test = { shell = "pytest --cov=missil tests/" }

lint = { composite = [
    "check || true",
    "check-dead || true",
    "check-typing || true",
] }
fix = { composite = ["format || true"] }
lint-fix = { composite = ["lint || true", "fix || true"] }
lint-fix-test = { cmd = ["pre-commit", "run", "--all-files"] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pre-commit>=3.6.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "uvicorn>=0.26.0",
    "mkdocs-material>=9.5.4",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs>=1.5.3",
    "termynal>=0.11.1",
    "ruff>=0.4.3",
    "vulture>=2.11",
    "pymarkdownlnt>=0.9.36",
]
